@@ -11,15 +11,15 @@ public class DepartmentsTest {
     @Test
     public void whenOneMissed() {
         List<String> input = List.of("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenSeveralMissed() {
-        List<String> input = Arrays.asList("k1", "k1/sk1/ssk1/sssk1");
-        List<String> expect = Arrays.asList(
+        List<String> input = List.of("k1", "k1/sk1/ssk1/sssk1");
+        List<String> expect = List.of(
                 "k1",
                 "k1/sk1",
                 "k1/sk1/ssk1",
@@ -31,8 +31,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -45,7 +45,7 @@ public class DepartmentsTest {
                 "k1/sk1/ssk1/sssk1",
                 "k1/sk1"
         );
-        List<String> expected = Arrays.asList(
+        List<String> expected = List.of(
                 "k1",
                 "k1/sk1",
                 "k1/sk1/ssk1",
@@ -65,7 +65,7 @@ public class DepartmentsTest {
                 "k2/sk1",
                 "k1/sk1"
         );
-        List<String> expected = Arrays.asList(
+        List<String> expected = List.of(
                 "k2",
                 "k2/sk1",
                 "k2/sk1/ssk2/sssk1",
